# dividend-history-tracker

./: .gitignore  README.md  pyproject.toml
backend/: .template.env  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5c16f7c0c05c_add_unique_constraint_on_events_table.py  60ea883f3d82_create_sqlite_db.py  816437e392f6_create_stocks_metrics_and_events_tables.py  cb7c6c3f2302_add_unique_constraint_on_events_table.py
backend/app/: main.py
backend/app/domain/: repository.py  schemas.py  service.py
backend/config/: settings.py
backend/database/db/: __init__.py  base.py  session.py
backend/database/models/: __init__.py  event.py  metric.py  stock.py
backend/scraper/: __init__.py  errors.py  page.py  scraper.py  selenium_wrapper.py
backend/tests/: conftest.py
backend/tests/fixtures/: aapl_dividend_history.json
backend/tests/fixtures/dividendhistory_aapl_page/: index.html
backend/tests/fixtures/dividendhistory_aapl_page/AAPL Apple Payout Date _ Dividend History_files/: DividendChart.DyeTAKwe.css  DividendChart.astro_astro_type_script_index_0_lang.D6IWWURI.js  DividendTable.astro_astro_type_script_index_0_lang.CvMfxQfG.js  FinanceChart.astro_astro_type_script_index_0_lang.DwgFPZBW.js  Layout.astro_astro_type_script_index_0_lang.BBdXOlp_.js  ReportLayout.BpcIh8Jr.css  f.txt  (+5 more)
backend/tests/integration/: conftest.py  test_dividend_history.py
backend/tests/unit/: conftest.py
backend/tests/unit/scraper/: test_scraper.py  test_selenium_wrapper.py
docs/: decisions.md
frontend/: main.py  pyproject.toml
frontend/src/: api.py  settings.py
