[project]
name = "dividend-history"
version = "0.1.0"
description = "Dividend history tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
    "typos>=1.45.1",
]

[tool.pytest.ini_options]
markers = [
    "live: mark test as requiring live external services",
]

[tool.typos.files]
extend-exclude = [
    "backend/tests/fixtures/",
    "uv.lock",
]

# [tool.typos.default.extend-words]
# crate = "crate" # supressing false positive
# teh = "the" # force correction
